# fidc_data

./: LICENSE  README.md  main.py  pyproject.toml  streamlit_app.py
data/output/: inf_mensal_fidc_tab_VII_202308.csv  inf_mensal_fidc_tab_VII_202309.csv  inf_mensal_fidc_tab_VII_202310.csv  inf_mensal_fidc_tab_VII_202311.csv  inf_mensal_fidc_tab_VII_202312.csv  inf_mensal_fidc_tab_VII_202401.csv  inf_mensal_fidc_tab_VII_202402.csv  inf_mensal_fidc_tab_VII_202403.csv  inf_mensal_fidc_tab_VII_202404.csv  inf_mensal_fidc_tab_VII_202405.csv  inf_mensal_fidc_tab_VII_202406.csv  inf_mensal_fidc_tab_VII_202407.csv
