[tool.poetry]
name = "fidc"
version = "0.1.0"
description = "Project that takes fidc data to plot in an online dash"
authors = ["willp12 <31415008+willp12@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
streamlit = "^1.37.1"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
